tests/snapshots/tokenize__prefix_increment.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n= at 2:11\nIntLiteral(5) at 2:13\n; at 2:14\nint at 3:5\nIdentifier(y) at 3:9\n= at 3:11\n++ at 3:13\nIdentifier(x) at 3:15\n; at 3:16\nreturn at 4:5\nIdentifier(y) at 4:12\n; at 4:13\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
