tests/snapshots/tokenize__register_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nregister at 3:5\nint at 3:14\nIdentifier(count) at 3:18\n= at 3:24\nIntLiteral(10, None) at 3:26\n; at 3:28\nregister at 4:5\nint at 4:14\nIdentifier(result) at 4:18\n= at 4:25\nIntLiteral(0, None) at 4:27\n; at 4:28\nfor at 8:5\n( at 8:9\nregister at 8:10\nint at 8:19\nIdentifier(i) at 8:23\n= at 8:25\nIntLiteral(0, None) at 8:27\n; at 8:28\nIdentifier(i) at 8:30\n< at 8:32\nIdentifier(count) at 8:34\n; at 8:39\nIdentifier(i) at 8:41\n= at 8:43\nIdentifier(i) at 8:45\n+ at 8:47\nIntLiteral(1, None) at 8:49\n) at 8:50\n{ at 8:52\nIdentifier(result) at 9:9\n= at 9:16\nIdentifier(i) at 9:18\n; at 9:19\n} at 10:5\nreturn at 12:5\nIdentifier(result) at 12:12\n+ at 12:19\nIntLiteral(1, None) at 12:21\n; at 12:22\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
