tests/snapshots/tokenize__return_literal.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nreturn at 2:5\nIntLiteral(42, None) at 2:12\n; at 2:14\n} at 3:1\nEOF at 4:1\n"
stderr: ""
status: 0
