tests/snapshots/tokenize__shift_mod.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(a) at 2:9\n= at 2:11\nIntLiteral(5) at 2:13\n; at 2:14\nint at 3:5\nIdentifier(b) at 3:9\n= at 3:11\nIntLiteral(2) at 3:13\n; at 3:14\nint at 4:5\nIdentifier(c) at 4:9\n= at 4:11\nIdentifier(a) at 4:13\n<< at 4:15\nIdentifier(b) at 4:18\n; at 4:19\nint at 5:5\nIdentifier(d) at 5:9\n= at 5:11\nIdentifier(c) at 5:13\n>> at 5:15\nIntLiteral(1) at 5:18\n; at 5:19\nint at 6:5\nIdentifier(sr) at 6:9\n= at 6:12\n- at 6:14\nIntLiteral(8) at 6:15\n>> at 6:17\nIntLiteral(1) at 6:20\n; at 6:21\nunsigned at 7:5\nint at 7:14\nIdentifier(ua) at 7:18\n= at 7:21\nIntLiteral(240) at 7:23\n; at 7:26\nunsigned at 8:5\nint at 8:14\nIdentifier(ub) at 8:18\n= at 8:21\nIdentifier(ua) at 8:23\n>> at 8:26\nIntLiteral(3) at 8:29\n; at 8:30\nint at 9:5\nIdentifier(e) at 9:9\n= at 9:11\nIntLiteral(17) at 9:13\n% at 9:16\nIntLiteral(5) at 9:18\n; at 9:19\nunsigned at 10:5\nint at 10:14\nIdentifier(ue) at 10:18\n= at 10:21\nIntLiteral(17) at 10:23\n% at 10:26\nIntLiteral(5) at 10:28\n; at 10:29\nreturn at 12:5\n( at 12:12\nIdentifier(c) at 12:13\n+ at 12:15\nIdentifier(d) at 12:17\n+ at 12:19\n( at 12:21\nIdentifier(sr) at 12:22\n& at 12:25\nIntLiteral(255) at 12:27\n) at 12:30\n+ at 12:32\nIdentifier(ub) at 12:34\n+ at 12:37\nIdentifier(e) at 12:39\n+ at 12:41\nIdentifier(ue) at 12:43\n) at 12:45\n& at 12:47\nIntLiteral(255) at 12:49\n; at 12:52\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
