tests/snapshots/tokenize__signal_header.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 3:1\nint at 3:9\nIdentifier(sig_atomic_t) at 3:13\n; at 3:25\nextern at 10:1\nint at 10:8\nIdentifier(raise) at 10:12\n( at 10:17\nint at 10:18\nIdentifier(sig) at 10:22\n) at 10:25\n; at 10:26\nextern at 12:1\nvoid at 12:8\n* at 12:13\nIdentifier(signal) at 12:14\n( at 12:20\nint at 12:21\nIdentifier(sig) at 12:25\n, at 12:28\nvoid at 12:30\n* at 12:35\nIdentifier(handler) at 12:36\n) at 12:43\n; at 12:44\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\nIdentifier(sig_atomic_t) at 16:5\nIdentifier(flag) at 16:18\n= at 16:23\nIntLiteral(0, None) at 16:25\n; at 16:26\nint at 17:5\nIdentifier(sig) at 17:9\n= at 17:13\nIntLiteral(2, None) at 17:15\n; at 17:16\nint at 18:5\nIdentifier(sum) at 18:9\n= at 18:13\nIntLiteral(6, None) at 18:15\n+ at 18:17\nIntLiteral(8, None) at 18:19\n+ at 18:21\nIntLiteral(4, None) at 18:23\n+ at 18:25\nIntLiteral(11, None) at 18:27\n+ at 18:30\nIntLiteral(15, None) at 18:32\n; at 18:34\nif at 20:5\n( at 20:8\nIdentifier(sum) at 20:9\n== at 20:13\nIntLiteral(0, None) at 20:16\n) at 20:17\n{ at 20:19\nreturn at 21:9\nIntLiteral(1, None) at 21:16\n; at 21:17\n} at 22:5\nif at 24:5\n( at 24:8\nIdentifier(sig) at 24:9\n== at 24:13\nIntLiteral(0, None) at 24:16\n) at 24:17\n{ at 24:19\nreturn at 25:9\nIntLiteral(1, None) at 25:16\n; at 25:17\n} at 26:5\nif at 28:5\n( at 28:8\nIdentifier(flag) at 28:9\n!= at 28:14\nIntLiteral(0, None) at 28:17\n) at 28:18\n{ at 28:20\nreturn at 29:9\nIntLiteral(1, None) at 29:16\n; at 29:17\n} at 30:5\nif at 32:5\n( at 32:8\n( at 32:9\n( at 32:10\nvoid at 32:11\n* at 32:16\n) at 32:17\n- at 32:18\nIntLiteral(1, None) at 32:19\n) at 32:20\n== at 32:22\n( at 32:25\n( at 32:26\nvoid at 32:27\n* at 32:32\n) at 32:33\nIntLiteral(0, None) at 32:34\n) at 32:35\n) at 32:36\n{ at 32:38\nreturn at 33:9\nIntLiteral(1, None) at 33:16\n; at 33:17\n} at 34:5\nIdentifier(signal) at 36:5\n( at 36:11\nIntLiteral(2, None) at 36:12\n, at 36:13\n( at 36:15\n( at 36:16\nvoid at 36:17\n* at 36:22\n) at 36:23\nIntLiteral(0, None) at 36:24\n) at 36:25\n) at 36:26\n; at 36:27\nIdentifier(signal) at 37:5\n( at 37:11\nIntLiteral(15, None) at 37:12\n, at 37:14\n( at 37:16\n( at 37:17\nvoid at 37:18\n* at 37:23\n) at 37:24\nIntLiteral(1, None) at 37:25\n) at 37:26\n) at 37:27\n; at 37:28\nreturn at 39:5\nIntLiteral(0, None) at 39:12\n; at 39:13\n} at 40:1\nEOF at 41:1\n"
stderr: ""
status: 0
